--- a/headless-front-end/gatsby/src/styles/main.scss
+++ b/headless-front-end/gatsby/src/styles/main.scss
@@ -20,7 +20,7 @@ html {
 @import 'variables';
 @import 'embed';
 @import 'layout';
-@import 'richText';
+@import 'richtext';
 @import 'image';
 @import 'quote';
 @import 'bootstrap-carousel';
