--- a/headless-front-end/gatsby/src/styles/_image.scss
+++ b/headless-front-end/gatsby/src/styles/_image.scss
@@ -1,25 +1,21 @@
 figure {
   &.position-wide {
-    padding: 2rem 0;
-    width: 100%;
+    @apply w-full px-0 py-8;
   }
 
   &.position-center {
-    margin: auto;
-    min-width: $content-width - 10 rem;
-    padding: 2rem 0;
+    @apply m-auto px-0 py-8;
+    min-width: $content-width - 10rem;
     width: 75%;
   }
 
   &.position-left {
-    float: left;
-    margin: 0 1rem 1rem 0;
+    @apply float-left mt-0 mr-4 mb-4 ml-0;
     width: 40%;
   }
 
   &.position-right {
-    float: right;
-    margin: 0 0 1rem 1rem;
+    @apply float-right mt-0 mr-0 mb-4 ml-4;
     width: 40%;
   }
 }
