--- a/templates/404.twig
+++ b/templates/404.twig
@@ -3,7 +3,7 @@
   see this template when Dev Mode is on, however. To see it while Dev Mode is on,
   go to `yoursite.test/404`
 
-  See: https://docs.craftcms.com/v3/routing.html
+  See: https://craftcms.com/docs/4.x/routing.html#error-templates
 #}
 {% extends "_private/layout" %}
 
